docs/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: arkserver
spec:
  serviceName: arkserver
  replicas: 1
  selector:
    matchLabels:
      app: arkserver
  template:
    metadata:
      labels:
        app: arkserver
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: arkserver
          image: drpsychick/arkserver:latest
          ports:
            - containerPort: 27015
              protocol: UDP
              name: query
            - containerPort: 7778
              protocol: UDP
              name: game
            - containerPort: 7778
              protocol: TCP
              name: game-tcp
            - containerPort: 32330
              protocol: TCP
              name: rcon
            - containerPort: 8080
              protocol: TCP
              name: health
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: 12Gi
              cpu: 2000m
            limits:
              memory: 16Gi
          volumeMounts:
            - name: ark-data
              mountPath: /ark
  volumeClaimTemplates:
    - metadata:
        name: ark-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
