docs/k8s/admin-list-server.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-admin-list-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ark-admin-list-server
  template:
    metadata:
      labels:
        app: ark-admin-list-server
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: njs
              mountPath: /etc/nginx/njs/
            - name: steam-ids
              mountPath: /vault-data
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: ark-admin-list-nginx-conf
        - name: njs
          configMap:
            name: ark-admin-list-njs
        - name: steam-ids
          secret:
            secretName: ark-admin-ids
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: ark-admin-list-server
spec:
  selector:
    app: ark-admin-list-server
  ports:
    - port: 8080
      targetPort: 8080
